crates/php-parser/tests/snapshots/integration__test_version_php85_void_cast_requires_85_result_84_ast.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result_84.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Void",
              {
                "kind": {
                  "FunctionCall": {
                    "name": {
                      "kind": {
                        "Identifier": "getVersion"
                      },
                      "span": {
                        "start": 13,
                        "end": 23
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 13,
                  "end": 25
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 25
          }
        }
      },
      "span": {
        "start": 6,
        "end": 26
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 26
  }
}
