crates/php-parser/tests/snapshots/integration__test_version_php85_void_cast_requires_85_result_84_errors.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result_84)
---
'void cast' requires PHP 8.5 or higher (targeting PHP 8.4)
