crates/php-parser/tests/snapshots/integration__throw_statement.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php throw new Exception('Something went wrong');
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Throw": {
          "kind": {
            "New": {
              "class": {
                "kind": {
                  "Identifier": "Exception"
                },
                "span": {
                  "start": 16,
                  "end": 25
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "String": "Something went wrong"
                    },
                    "span": {
                      "start": 26,
                      "end": 48
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 26,
                    "end": 48
                  }
                }
              ]
            }
          },
          "span": {
            "start": 12,
            "end": 49
          }
        }
      },
      "span": {
        "start": 6,
        "end": 50
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 50
  }
}
