crates/php-parser/tests/snapshots/integration__trailing_commas.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$arr = [1, 2, 3,];
foo($a, $b, $c,);
function bar($x, $y,) {}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "arr"
                },
                "span": {
                  "start": 6,
                  "end": 10
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 14,
                          "end": 15
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 14,
                        "end": 15
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 2
                        },
                        "span": {
                          "start": 17,
                          "end": 18
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 17,
                        "end": 18
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 3
                        },
                        "span": {
                          "start": 20,
                          "end": 21
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 20,
                        "end": 21
                      }
                    }
                  ]
                },
                "span": {
                  "start": 13,
                  "end": 23
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 23
          }
        }
      },
      "span": {
        "start": 6,
        "end": 25
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "foo"
                },
                "span": {
                  "start": 25,
                  "end": 28
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "a"
                    },
                    "span": {
                      "start": 29,
                      "end": 31
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 29,
                    "end": 31
                  }
                },
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "b"
                    },
                    "span": {
                      "start": 33,
                      "end": 35
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 33,
                    "end": 35
                  }
                },
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "c"
                    },
                    "span": {
                      "start": 37,
                      "end": 39
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 37,
                    "end": 39
                  }
                }
              ]
            }
          },
          "span": {
            "start": 25,
            "end": 41
          }
        }
      },
      "span": {
        "start": 25,
        "end": 43
      }
    },
    {
      "kind": {
        "Function": {
          "name": "bar",
          "params": [
            {
              "name": "x",
              "type_hint": null,
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 56,
                "end": 58
              }
            },
            {
              "name": "y",
              "type_hint": null,
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 60,
                "end": 62
              }
            }
          ],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 43,
        "end": 67
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 67
  }
}
