crates/php-parser/tests/snapshots/integration__trailing_commas_everywhere.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function foo($a, $b,) {}
foo(1, 2,);
$f = function($x,) use ($y,) {};
$g = fn($x,) => $x;
[$a, $b,] = $arr;
match ($x) { 1 => 'a', 2 => 'b', };
use App\{A, B,};

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [
            {
              "name": "a",
              "type_hint": null,
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 19,
                "end": 21
              }
            },
            {
              "name": "b",
              "type_hint": null,
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 23,
                "end": 25
              }
            }
          ],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 30
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "foo"
                },
                "span": {
                  "start": 31,
                  "end": 34
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Int": 1
                    },
                    "span": {
                      "start": 35,
                      "end": 36
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 35,
                    "end": 36
                  }
                },
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Int": 2
                    },
                    "span": {
                      "start": 38,
                      "end": 39
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 38,
                    "end": 39
                  }
                }
              ]
            }
          },
          "span": {
            "start": 31,
            "end": 41
          }
        }
      },
      "span": {
        "start": 31,
        "end": 43
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "f"
                },
                "span": {
                  "start": 43,
                  "end": 45
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Closure": {
                    "is_static": false,
                    "by_ref": false,
                    "params": [
                      {
                        "name": "x",
                        "type_hint": null,
                        "default": null,
                        "by_ref": false,
                        "variadic": false,
                        "is_readonly": false,
                        "is_final": false,
                        "visibility": null,
                        "set_visibility": null,
                        "attributes": [],
                        "span": {
                          "start": 57,
                          "end": 59
                        }
                      }
                    ],
                    "use_vars": [
                      {
                        "name": "y",
                        "by_ref": false,
                        "span": {
                          "start": 67,
                          "end": 69
                        }
                      }
                    ],
                    "return_type": null,
                    "body": [],
                    "attributes": []
                  }
                },
                "span": {
                  "start": 48,
                  "end": 74
                }
              }
            }
          },
          "span": {
            "start": 43,
            "end": 74
          }
        }
      },
      "span": {
        "start": 43,
        "end": 76
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "g"
                },
                "span": {
                  "start": 76,
                  "end": 78
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "ArrowFunction": {
                    "is_static": false,
                    "by_ref": false,
                    "params": [
                      {
                        "name": "x",
                        "type_hint": null,
                        "default": null,
                        "by_ref": false,
                        "variadic": false,
                        "is_readonly": false,
                        "is_final": false,
                        "visibility": null,
                        "set_visibility": null,
                        "attributes": [],
                        "span": {
                          "start": 84,
                          "end": 86
                        }
                      }
                    ],
                    "return_type": null,
                    "body": {
                      "kind": {
                        "Variable": "x"
                      },
                      "span": {
                        "start": 92,
                        "end": 94
                      }
                    },
                    "attributes": []
                  }
                },
                "span": {
                  "start": 81,
                  "end": 94
                }
              }
            }
          },
          "span": {
            "start": 76,
            "end": 94
          }
        }
      },
      "span": {
        "start": 76,
        "end": 96
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "a"
                        },
                        "span": {
                          "start": 97,
                          "end": 99
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 97,
                        "end": 99
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "b"
                        },
                        "span": {
                          "start": 101,
                          "end": 103
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 101,
                        "end": 103
                      }
                    }
                  ]
                },
                "span": {
                  "start": 96,
                  "end": 105
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Variable": "arr"
                },
                "span": {
                  "start": 108,
                  "end": 112
                }
              }
            }
          },
          "span": {
            "start": 96,
            "end": 112
          }
        }
      },
      "span": {
        "start": 96,
        "end": 114
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Match": {
              "subject": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 121,
                  "end": 123
                }
              },
              "arms": [
                {
                  "conditions": [
                    {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 127,
                        "end": 128
                      }
                    }
                  ],
                  "body": {
                    "kind": {
                      "String": "a"
                    },
                    "span": {
                      "start": 132,
                      "end": 135
                    }
                  },
                  "span": {
                    "start": 127,
                    "end": 135
                  }
                },
                {
                  "conditions": [
                    {
                      "kind": {
                        "Int": 2
                      },
                      "span": {
                        "start": 137,
                        "end": 138
                      }
                    }
                  ],
                  "body": {
                    "kind": {
                      "String": "b"
                    },
                    "span": {
                      "start": 142,
                      "end": 145
                    }
                  },
                  "span": {
                    "start": 137,
                    "end": 145
                  }
                }
              ]
            }
          },
          "span": {
            "start": 114,
            "end": 148
          }
        }
      },
      "span": {
        "start": 114,
        "end": 150
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "App",
                  "A"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 154,
                  "end": 160
                }
              },
              "alias": null,
              "span": {
                "start": 159,
                "end": 160
              }
            },
            {
              "name": {
                "parts": [
                  "App",
                  "B"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 154,
                  "end": 163
                }
              },
              "alias": null,
              "span": {
                "start": 162,
                "end": 163
              }
            }
          ]
        }
      },
      "span": {
        "start": 150,
        "end": 167
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 167
  }
}
