crates/php-parser/tests/snapshots/integration__trailing_dot_float_literals.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php 0.; 1.; 42.;

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Float": 0.0
          },
          "span": {
            "start": 6,
            "end": 8
          }
        }
      },
      "span": {
        "start": 6,
        "end": 10
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Float": 1.0
          },
          "span": {
            "start": 10,
            "end": 12
          }
        }
      },
      "span": {
        "start": 10,
        "end": 14
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Float": 42.0
          },
          "span": {
            "start": 14,
            "end": 17
          }
        }
      },
      "span": {
        "start": 14,
        "end": 19
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 19
  }
}
