crates/php-parser/tests/snapshots/integration__trait.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
trait Timestampable {
    public function getCreatedAt(): string {
        return $this->createdAt;
    }
}
class Post {
    use Timestampable;
    public string $title;
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Trait": {
          "name": "Timestampable",
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "getCreatedAt",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 64,
                          "end": 70
                        }
                      }
                    },
                    "span": {
                      "start": 64,
                      "end": 70
                    }
                  },
                  "body": [
                    {
                      "kind": {
                        "Return": {
                          "kind": {
                            "PropertyAccess": {
                              "object": {
                                "kind": {
                                  "Variable": "this"
                                },
                                "span": {
                                  "start": 88,
                                  "end": 93
                                }
                              },
                              "property": {
                                "kind": {
                                  "Identifier": "createdAt"
                                },
                                "span": {
                                  "start": 95,
                                  "end": 104
                                }
                              }
                            }
                          },
                          "span": {
                            "start": 88,
                            "end": 104
                          }
                        }
                      },
                      "span": {
                        "start": 81,
                        "end": 110
                      }
                    }
                  ],
                  "attributes": []
                }
              },
              "span": {
                "start": 32,
                "end": 112
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 113
      }
    },
    {
      "kind": {
        "Class": {
          "name": "Post",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "TraitUse": {
                  "traits": [
                    {
                      "parts": [
                        "Timestampable"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 135,
                        "end": 148
                      }
                    }
                  ],
                  "adaptations": []
                }
              },
              "span": {
                "start": 131,
                "end": 154
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "title",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 161,
                          "end": 167
                        }
                      }
                    },
                    "span": {
                      "start": 161,
                      "end": 167
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 154,
                "end": 174
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 114,
        "end": 177
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 177
  }
}
